--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ node_js:
   - "0.10"
   - "0.8"
   - "0.6"
-before_install:
-  - npm update -g npm
-  - npm install -g grunt-cli
+before_script: npm update -g npm
+before_install: npm install -g grunt-cli
